load("@org_pubref_rules_kotlin//kotlin:rules.bzl", "kotlin_library", "kotlin_test")

kotlin_library(
    name = "react_kt",
    visibility = ["//visibility:public"],
    srcs = glob(["src/main/kotlin/**/*.kt"]),
)

kotlin_test(
    name = "react_kt_test",
    test_class = "react.FullTestSuite",
    srcs = glob(["src/test/kotlin/**/*.kt"]),
    size = "small",
    deps = [
        ":react_kt",
    ],
    java_deps = [
        "@junit4//jar",
    ],
)
