
# Make everything public while issue https://github.com/pubref/rules_kotlin/issues/27 is unresolved
package(default_visibility = ["//visibility:public"])

load("@org_pubref_rules_kotlin//kotlin:rules.bzl", "kotlin_library", "kotlin_test")

kotlin_library(
    name = "react_kt",
    srcs = glob(["src/main/kotlin/**/*.kt"]),
)

kotlin_test(
    name = "react_kt_test",
    visibility = ["//visibility:private"],
    test_class = "react.FullTestSuite",
    srcs = glob(["src/test/kotlin/**/*.kt"]),
    size = "small",
    deps = [
        ":react_kt",
    ],
    java_deps = [
        "@junit4//jar",
    ],
)
